--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10047,7 +10047,7 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T230(?:NU)?'
       device: 'tablet'
       model: 'GALAXY Tab 4 7.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T231'
+    - regex: '(?:SAMSUNG-)?SM-T23[15]'
       device: 'tablet'
       model: 'GALAXY Tab 4 7.0" 3G'
     - regex: '(?:SAMSUNG-)?SM-T310'
@@ -10062,13 +10062,13 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-T330'
       device: 'tablet'
       model: 'GALAXY Tab 4 8.0" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T335'
+    - regex: '(?:SAMSUNG-)?SM-T33[15]'
       device: 'tablet'
       model: 'GALAXY Tab 4 8.0" LTE'
     - regex: '(?:SAMSUNG-)?SM-T520'
       device: 'tablet'
       model: 'GALAXY TabPRO 10.1" WiFi'
-    - regex: '(?:SAMSUNG-)?SM-T535'
+    - regex: '(?:SAMSUNG-)?SM-T53[15]'
       device: 'tablet'
       model: 'GALAXY Tab 4 10.1" LTE'
     - regex: '(?:SAMSUNG-)?SM-T320'
@@ -10168,7 +10168,7 @@ Samsung:
       model: 'GALAXY Watch Active 2'
 
     # explicit smartphone models
-    - regex: '(?:SAMSUNG-)?SM-G850[AMSWY]'
+    - regex: '(?:SAMSUNG-)?SM-G850[AMSWYKL]'
       model: 'GALAXY Alpha'
     - regex: '(?:SAMSUNG-)?GT-B5330'
       model: 'GALAXY Chat'
@@ -10188,16 +10188,20 @@ Samsung:
       model: 'GALAXY 3'
     - regex: '(?:SAMSUNG-)?GT-I8000'
       model: 'Omnia II'
-    - regex: '(?:SAMSUNG-)?GT-I8150'
+    - regex: '(?:SAMSUNG-)?(?:GT-I8150|SM-T255S)'
       model: 'GALAXY W'
     - regex: '(?:SAMSUNG-)?GT-S5830'
       model: 'GALAXY Ace'
+    - regex: '(?:SAMSUNG-)?SM-(?:G357FZ|G310HN)'
+      model: 'GALAXY Ace Style'
     - regex: '(?:SAMSUNG-)?GT-I8160'
       model: 'GALAXY Ace 2'
     - regex: '(?:SAMSUNG-)?SM-G313(?:HY|M[LUY]|[FM])'
       model: 'GALAXY Ace 4'
     - regex: '(?:SAMSUNG-)?SM-G313[HU]'
       model: 'GALAXY Ace 4 Lite'
+    - regex: '(?:SAMSUNG-)?SM-G318H'
+      model: 'GALAXY Ace 4 Neo'
     - regex: '(?:SAMSUNG-)?GT-I8190'
       model: 'GALAXY S III mini'
     - regex: '(?:SAMSUNG-)?GT-I8200'
@@ -10212,6 +10216,8 @@ Samsung:
       model: 'GALAXY Wide'
     - regex: '(?:SAMSUNG-)?GT-I855[028]'
       model: 'GALAXY Win'
+    - regex: '(?:SAMSUNG-)?SM-G3818'
+      model: 'GALAXY Win Pro'
     - regex: '(?:SAMSUNG-)?GT-I8580'
       model: 'GALAXY Core Advance'
     - regex: '(?:SAMSUNG-)?GT-I8730'
@@ -10320,13 +10326,15 @@ Samsung:
       model: 'GALAXY K zoom'
     - regex: '(?:SAMSUNG-)?SM-G318HZ'
       model: 'GALAXY V Plus'
+    - regex: '(?:SAMSUNG-)?SM-(?:G355H|G3556D)'
+      model: 'GALAXY CORE 2'
     - regex: '(?:SAMSUNG-)?SM-G350'
       model: 'GALAXY CORE Plus'
     - regex: '(?:SAMSUNG-)?SM-G360[FH]?'
       model: 'GALAXY CORE Prime'
     - regex: '(?:SAMSUNG-)?SM-G361[FH]?'
       model: 'GALAXY CORE Prime Value Edition'
-    - regex: '(?:SAMSUNG-)?SM-G386F'
+    - regex: '(?:SAMSUNG-)?SM-(?:G386F|G3586V)'
       model: 'GALAXY CORE LTE'
     - regex: '(?:SAMSUNG-)?SM-G3815'
       model: 'GALAXY EXPRESS II'
@@ -10348,7 +10356,7 @@ Samsung:
       model: 'GALAXY S5 Neo'
     - regex: '(?:SAMSUNG-)?SM-G860P'
       model: 'GALAXY S5 K Sport'
-    - regex: '(?:SAMSUNG-)?SM-G920(?:F[DQ]|W8|[089AFIKLPRSTVX])'
+    - regex: '(?:SAMSUNG-)?SM-G920(?:F[DQ]|W8|[089AFIKLPRSTVX])?'
       model: 'GALAXY S6'
     - regex: '(?:SAMSUNG-)?SM-G890A'
       model: 'GALAXY S5 Active'
@@ -10434,6 +10442,8 @@ Samsung:
       model: 'GALAXY A7 (2017)'
     - regex: '(?:SAMSUNG-)?SM-A750(?:GN|[FGC])'
       model: 'GALAXY A7 (2018)'
+    - regex: '(?:SAMSUNG-)?SM-A71[);/ ]'
+      model: 'GALAXY A71'
     - regex: '(?:SAMSUNG-)?SM-A(?:530F|800[0FISY])|SCV32'
       model: 'GALAXY A8'
     - regex: '(?:SAMSUNG-)?SM-G885[FSY]'
@@ -10448,7 +10458,7 @@ Samsung:
       model: 'GALAXY A9'
     - regex: 'SM-A9\[7\]'
       model: 'GALAXY A9 7'
-    - regex: '(?:SAMSUNG-)?SM-A920F'
+    - regex: '(?:SAMSUNG-)?SM-A920[FX]'
       model: 'GALAXY A9 (2018)'
     - regex: '(?:SAMSUNG-)?SM-A910[0F]'
       model: 'GALAXY A9 Pro'
@@ -10466,7 +10476,7 @@ Samsung:
       model: 'GALAXY A30'
     - regex: '(?:SAMSUNG-)?SM-A307(?:FN|GN|GT|[FG])'
       model: 'GALAXY A30s'
-    - regex: '(?:SAMSUNG-)?SM-A405FN'
+    - regex: '(?:SAMSUNG-)?SM-A405F[NM]'
       model: 'GALAXY A40'
     - regex: '(?:SAMSUNG-)?SM-A3051'
       model: 'GALAXY A40s'
@@ -10480,11 +10490,11 @@ Samsung:
       model: 'GALAXY S III Neo'
     - regex: '(?:SAMSUNG-)?SM-J100(?:FN|MU|[FHM])'
       model: 'GALAXY J1'
-    - regex: '(?:SAMSUNG-)?SM-J105(?:B|H)'
+    - regex: '(?:SAMSUNG-)?SM-J105[BFHY]'
       model: 'GALAXY J1 mini'
-    - regex: '(?:SAMSUNG-)?SM-J106M'
+    - regex: '(?:SAMSUNG-)?SM-J106[FM]'
       model: 'GALAXY J1 mini Prime'
-    - regex: '(?:SAMSUNG-)?SM-J120[AFHMT]'
+    - regex: '(?:SAMSUNG-)?SM-J120[AFHGMT]'
       model: 'GALAXY J1 (2016)'
     - regex: '(?:SAMSUNG-)?SM-J110[FHML]'
       model: 'GALAXY J1 Ace'
@@ -10500,10 +10510,14 @@ Samsung:
       model: 'GALAXY J2 Pro'
     - regex: '(?:SAMSUNG-)?SM-S367VL'
       model: 'GALAXY J3 Orbit'
+    - regex: '(?:SAMSUNG-)?SM-J311(?:0|9S)'
+      model: 'GALAXY J3 Pro'
     - regex: '(?:SAMSUNG-)?SM-J327T1'
       model: 'GALAXY J3 Prime'
     - regex: '(?:SAMSUNG-)?SM-J327V'
       model: 'GALAXY J3 Eclipse'
+    - regex: '(?:SAMSUNG-)?SM-J3109'
+      model: 'GALAXY J3 (2015)'
     - regex: '(?:SAMSUNG-)?SM-J320(?:FN|[AFGHMNPV])'
       model: 'GALAXY J3 (2016)'
     - regex: '(?:SAMSUNG-)?SM-J330(?:F|G)'
@@ -10512,9 +10526,9 @@ Samsung:
       model: 'GALAXY J3 (2018)'
     - regex: '(?:SAMSUNG-)?SM-J400[FGM]'
       model: 'GALAXY J4'
-    - regex: '(?:SAMSUNG-)?SM-J500(?:F|FN|G|Y|M|H)'
+    - regex: '(?:SAMSUNG-)?SM-J500(?:F|FN|G|Y|M|H|N0)'
       model: 'GALAXY J5 (2015)'
-    - regex: '(?:SAMSUNG-)?SM-J510(?:F|FN|MN)'
+    - regex: '(?:SAMSUNG-)?SM-(?:J510(?:[8F]|[FM]N)|5108)'
       model: 'GALAXY J5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-J530'
       model: 'GALAXY J5 (2017)'
@@ -10562,7 +10576,7 @@ Samsung:
       model: 'GALAXY J9 7 Prime'
     - regex: 'SM-J9\[8\] Pro'
       model: 'GALAXY J9 8 Pro'
-    - regex: '(?:SAMSUNG-)?SM-M105F'
+    - regex: '(?:SAMSUNG-)?SM-M105[FG]'
       model: 'GALAXY M10'
     - regex: '(?:SAMSUNG-)?SM-M205[FG]'
       model: 'GALAXY M20'
@@ -10572,7 +10586,7 @@ Samsung:
       model: 'GALAXY Alpha'
     - regex: '(?:SAMSUNG-)?SM-G910S'
       model: 'GALAXY Round'
-    - regex: '(?:SAMSUNG-)?SM-(?:G550FY|G5510|G5520)'
+    - regex: '(?:SAMSUNG-)?SM-(?:G550FY|G55[01]0|G5520)'
       model: 'GALAXY On5'
     - regex: '(?:SAMSUNG-)?SM-G600(?:FY|[0F])'
       model: 'GALAXY On7'     
@@ -10600,10 +10614,12 @@ Samsung:
       model: 'GALAXY Z3'
     - regex: '(?:SAMSUNG-)?SM-Z400[FY]'
       model: 'GALAXY Z4'
-    - regex: '(?:SAMSUNG-)?SM-G150'
+    - regex: '(?:SAMSUNG-)?SM-(?:G150|G155S)'
       model: 'GALAXY Folder'
     - regex: '(?:SAMSUNG-)?SM-G165'
       model: 'GALAXY Folder 2'
+    - regex: '(?:SAMSUNG-)?SM-J321AZ'
+      model: 'GALAXY Sol'
 
     # explicit phablet models
     - regex: '(?:SAMSUNG-)?GT-I9060'
@@ -10635,7 +10651,7 @@ Samsung:
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G720(?:AX|N0|2)'
       model: 'GALAXY Grand Max'
-    - regex: '(?:SAMSUNG-)?SM-G53(?:0F|0FZ|0Y|0H|0FZ|1F|1H)'
+    - regex: '(?:SAMSUNG-)?SM-G53(?:0[FTYHW]|0[AF]Z|1[FH])'
       model: 'GALAXY Grand Prime'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-G532F'
@@ -10662,10 +10678,13 @@ Samsung:
     - regex: '(?:SAMSUNG-)?SM-N910|N9100'
       model: 'GALAXY Note 4'
       device: 'phablet'
+    - regex: '(?:SAMSUNG-)?SM-N916[SK]'
+      model: 'GALAXY Note 4 LTE'
+      device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N915'
       model: 'GALAXY Note 4 Edge'
       device: 'phablet'
-    - regex: '(?:SAMSUNG-)?SM-N920[0ACGIKLST]'
+    - regex: '(?:SAMSUNG-)?SM-N920[0ACGIKLSTV]'
       model: 'GALAXY Note 5'
       device: 'phablet'
     - regex: '(?:SAMSUNG-)?SM-N9208'
