--- a/Tests/fixtures/smartphone-15.yml
+++ b/Tests/fixtures/smartphone-15.yml
@@ -919,5 +919,205 @@
     model: GALAXY Xcover 4
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SAMSUNG-SM-J327AZ Build/NRD91D) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/79.0.3945.88 Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    short_name: CH
+    version: 79.0.3945.88
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY Amp Prime 2
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SAMSUNG SM-J327A) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/11.2 Chrome/75.0.3770.143 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    short_name: SB
+    version: "11.2"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J3 Prime
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SAMSUNG SM-G5700) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/11.2 Chrome/75.0.3770.143 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    short_name: SB
+    version: "11.2"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J5 Prime
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SAMSUNG SM-G955X) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/11.1 Chrome/75.0.3770.143 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    short_name: SB
+    version: "11.1"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY S8+
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SAMSUNG SM-J327F) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/11.1 Chrome/75.0.3770.143 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    short_name: SB
+    version: "11.1"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J3 Emerge
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SAMSUNG SM-J327R4 Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/5.2 Chrome/51.0.2704.106 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    short_name: SB
+    version: "5.2"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J3 Emerge
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SAMSUNG SM-J327R7 Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/7.4 Chrome/59.0.3071.125 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    short_name: SB
+    version: "7.4"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J3 (2017)
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SAMSUNG SM-J327T) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/12.0 Chrome/79.0.3945.136 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    short_name: SB
+    version: "12.0"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J3 Prime
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SAMSUNG SM-J327U) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/11.1 Chrome/75.0.3770.143 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    short_name: SB
+    version: "11.1"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J3 (2017)
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 7.0; SAMSUNG SM-J327W Build/NRD90M) AppleWebKit/537.36 (KHTML, like Gecko) SamsungBrowser/5.2 Chrome/51.0.2704.106 Mobile Safari/537.36
+  os:
+    name: Android
+    short_name: AND
+    version: "7.0"
+    platform: ""
+  client:
+    type: browser
+    name: Samsung Browser
+    short_name: SB
+    version: "5.2"
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: smartphone
+    brand: SA
+    model: GALAXY J3 Prime
+  os_family: Android
+  browser_family: Chrome
 
 
