--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10221,7 +10221,7 @@ Samsung:
       model: 'GALAXY S8'
     - regex: '(?:SAMSUNG-)?SM-G892[AU]'
       model: 'GALAXY S8 Active'
-    - regex: '(?:SAMSUNG-)?SM-G955[AFKLNPRTUVW0]|SCV35'
+    - regex: '(?:SAMSUNG-)?SM-G955[AFKLNPRTUVW0X]|SCV35'
       model: 'GALAXY S8+'
     - regex: '(?:SAMSUNG-)?SM-G960[FNUWX0]|SCV38'
       model: 'GALAXY S9'
@@ -10363,11 +10363,13 @@ Samsung:
       model: 'GALAXY J2 Pro'
     - regex: '(?:SAMSUNG-)?SM-S367VL'
       model: 'GALAXY J3 Orbit'
-    - regex: '(?:SAMSUNG-)?SM-J327T1'
+    - regex: '(?:SAMSUNG-)?SM-J327(?:T1|[ATW])[);/ ]'
       model: 'GALAXY J3 Prime'
+    - regex: '(?:SAMSUNG-)?SM-J327(?:F|R4)'
+      model: 'GALAXY J3 Emerge'
     - regex: '(?:SAMSUNG-)?SM-J320(?:FN|R4|W8|[AFGHMNPV])'
       model: 'GALAXY J3 (2016)'
-    - regex: '(?:SAMSUNG-)?SM-J330(?:F|G)'
+    - regex: '(?:SAMSUNG-)?SM-(?:J330[FG]|J327(?:R7|U))'
       model: 'GALAXY J3 (2017)'
     - regex: '(?:SAMSUNG-)?SM-J337W'
       model: 'GALAXY J3 (2018)'
@@ -10379,7 +10381,7 @@ Samsung:
       model: 'GALAXY J5 (2016)'
     - regex: '(?:SAMSUNG-)?SM-J530'
       model: 'GALAXY J5 (2017)'
-    - regex: '(?:SAMSUNG-)?SM-G570[FMY]'
+    - regex: '(?:SAMSUNG-)?SM-G570[0FMY]'
       model: 'GALAXY J5 Prime'
     - regex: '(?:SAMSUNG-)?SM-J600[FG]'
       model: 'GALAXY J6'
@@ -10467,7 +10469,8 @@ Samsung:
       model: 'GALAXY Folder 2'
     - regex: '(?:SAMSUNG-)?SM-W2016'
       model: 'GALAXY Golden 3'
-
+    - regex: '(?:SAMSUNG-)?SM-J327AZ'
+      model: 'GALAXY Amp Prime 2'
 
     # explicit phablet models
     - regex: '(?:SAMSUNG-)?SM-(?:F900[FU]|F907[BN])'
